DT-118 fix icon colors and z-index, add A-B

--- a/app/component/map/map.scss
+++ b/app/component/map/map.scss
@@ -88,12 +88,30 @@ div.current-location-marker > span > svg.icon {
 }
 
 div.leaflet-marker-icon.from, div.leaflet-marker-icon.to {
-  > span > svg.icon {
-    width: 24px;
-    height: 24px;
-    stroke: white;
-    stroke-width: 60px;
+  > span {
+    &::before {
+      color: white;
+      position: relative;
+      left: 6.5pt;
+      top: 13.5pt;
+      z-index: 1000;
+    }
+
+    > svg.icon {
+      width: 24px;
+      height: 24px;
+      stroke: white;
+      stroke-width: 60px;
+    }
   }
+}
+
+div.leaflet-marker-icon.from > span::before {
+  content: "A";
+}
+
+div.leaflet-marker-icon.to > span::before {
+  content: "B";
 }
 
 div.leaflet-marker-icon.vehicle-icon {
